fix alignment bug in user and org profile

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -308,6 +308,11 @@ span[data-tooltip]:hover:before {
   margin-left: auto;
 }
 
+.subtle-link.align-right ~ .btn,
+.btn.align-right ~ .btn {
+  margin-left: 15px;
+}
+
 .vertical > .btn + .btn {
   margin-left: 0;
   margin-top: 10px;
@@ -4970,12 +4975,6 @@ body.fit {
 
 .align-right {
   margin-left: auto;
-  
-  // give following elements a margin left
-  // used in setup wizard
-  & ~ * {
-    margin-left: 15px;
-  }
 }
 
 .align-center {
